--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,2 +1,12 @@
 name: A Test workflow for Hello World
 on: push
+
+jobs:
+  build:
+    name: Hello World action
+    run-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v1
+      - uses: ./action-a
+        with:
+          MY_NAME: "Mona"
